--- a/rlsmooth.html
+++ b/rlsmooth.html
@@ -11,9 +11,17 @@
 
 </head>
 <body>
-	<div class="smooth"></div>
+	<div class="smooth top">Hello!</div>
 	<div class="height">
 		<p>scroll down</p>
+		<p>keep scrolling down</p>
 	</div>
+	<div class="smooth btn">UP!</div>
+	<div class="smooth twt">
+		<a href="https://twitter.com/share" class="twitter-share-button" data-text="Tweet!" data-via="rodrigoludgero" data-lang="es" data-count="none" data-hashtags="jQuery" data-dnt="true">Tweet!</a>
+		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+	</div>
+
+
 </body>
 </html>
