--- a/rlsmooth.html
+++ b/rlsmooth.html
@@ -5,8 +5,12 @@
 	<title>RLSmooth Plugin</title>
 	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.7.3/build/cssreset/cssreset-min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css" media="all" />
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+	<script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
+
   <script type="text/javascript" src="js/rlsmooth.js"></script>
+
   <script type="text/javascript" src="js/scripts.js"></script>
 
 </head>
