update script.js and rlsmooth.html

--- a/rlsmooth.html
+++ b/rlsmooth.html
@@ -1,31 +1,43 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
+<!DOCTYPE html>
+
+<html lang="en">
+
 <head>
-	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
+	<meta charset="utf-8">
+
 	<title>RLSmooth Plugin</title>
-	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.7.3/build/cssreset/cssreset-min.css">
+	<meta name="author" content="Rodrigo Ludgero" />
+
+	<meta name="viewport" content="width=device-width, initial-scale=1" /> <!-- inform the browser to set the window width to the device’s width -->
+
+
+	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css" media="all" />
 
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-	<script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
-
+	<script type="text/javascript" src="js/jquery.min.js"></script>
+  <script type="text/javascript" src="js/html5shiv.js"></script>
   <script type="text/javascript" src="js/rlsmooth.js"></script>
-
   <script type="text/javascript" src="js/scripts.js"></script>
 
 </head>
 <body>
-	<div class="smooth top">Hello!</div>
+	<div class="smooth-style slide-option">Hello! I'm a slide option.</div>
+	<div class="smooth-style slideOut-option">I'm a slideOut option.</div>
+	<div class="smooth-style slideHide-option">I'm a slideHide option.</div>
+	<div class="smooth-style fade-option">I'm a fade option.</div>
+	<div class="smooth-style fadeUp-option">I'm a fadeUp option.</div>
+	<div class="smooth-style fadeHide-option">I'm a fadeHide option.</div>
+	<div class="smooth-style showHide-option">I'm a showHide option.</div>
+	<div class="smooth-style showUp-option">I'm a showUp option.</div>
+	<div class="smooth-style showOut-option">I'm a showOut option.</div>
 	<div class="height">
 		<p>scroll down</p>
 		<p>keep scrolling down</p>
+		<p>keep scrolling down</p>
+		<p>keep scrolling down</p>
+		<p>keep scrolling down</p>
+		<p>scroll up</p>
 	</div>
-	<div class="smooth btn">UP!</div>
-	<div class="smooth twt">
-		<a href="https://twitter.com/share" class="twitter-share-button" data-text="rlSmooth jQuery Plugin" data-via="rodrigoludgero" data-lang="es" data-count="none" data-hashtags="jQuery">Twittear</a>
-		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-	</div>
-
 
 </body>
 </html>
